--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
+  "$schema": "https://www.schemastore.org/package.json",
+  "packageManager": "pnpm@10.0.0",
   "name": "turns",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "check-types": "tsc --noEmit",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "turbo": "^2.5.8",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.1.14"
   },
