--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "biome": "biome check --write",
+    "check-biome": "biome check",
     "check-types": "tsc --noEmit",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.0",
     "turbo": "^2.5.8",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.1.14"
