--- a/turbo.json
+++ b/turbo.json
@@ -1,46 +1,30 @@
 {
-  "$schema": "./node_modules/turbo/schema.json",
-  "tasks": {
-    "biome": {
-      "dependsOn": [
-        "^biome"
-      ]
-    },
-    "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "dist/**"
-      ]
-    },
-    "check": {
-      "dependsOn": [
-        "check-biome",
-        "check-types",
-        "^check"
-      ]
-    },
-    "check-biome": {
-      "dependsOn": [
-        "^check-biome"
-      ]
-    },
-    "check-types": {
-      "dependsOn": [
-        "^check-types"
-      ]
-    },
-    "dev": {
-      "persistent": true,
-      "cache": false
-    },
-    "preview": {
-      "dependsOn": [
-        "build"
-      ],
-      "persistent": true,
-      "cache": false
-    }
-  }
+	"$schema": "./node_modules/turbo/schema.json",
+	"tasks": {
+		"biome": {
+			"dependsOn": ["^biome"]
+		},
+		"build": {
+			"dependsOn": ["^build"],
+			"outputs": ["dist/**"]
+		},
+		"check": {
+			"dependsOn": ["check-biome", "check-types", "^check"]
+		},
+		"check-biome": {
+			"dependsOn": ["^check-biome"]
+		},
+		"check-types": {
+			"dependsOn": ["^check-types"]
+		},
+		"dev": {
+			"persistent": true,
+			"cache": false
+		},
+		"preview": {
+			"dependsOn": ["build"],
+			"persistent": true,
+			"cache": false
+		}
+	}
 }
