--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 	"type": "module",
 	"scripts": {
 		"biome": "biome check --write",
+		"prettier": "prettier --write .",
 		"check-biome": "biome check",
+		"check-prettier": "prettier .",
 		"check-types": "tsc --noEmit",
 		"dev": "vite",
 		"build": "vite build",
@@ -15,6 +17,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.0",
+		"prettier": "^3.6.2",
 		"turbo": "^2.5.8",
 		"typescript": "~5.9.3",
 		"vite": "npm:rolldown-vite@7.1.14"
