--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
 	"scripts": {
 		"biome": "biome check --write",
 		"check-biome": "biome check",
+		"check-superhtml": "superhtml fmt --check index.html",
 		"check-types": "tsc --noEmit",
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"superhtml": "superhtml fmt index.html"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.0",
