--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"preview": "vite preview",
 		"superhtml": "superhtml fmt index.html",
 		"storybook": "storybook dev -p 6006",
+		"test": "vitest run",
 		"build-storybook": "storybook build"
 	},
 	"devDependencies": {
@@ -29,7 +30,8 @@
 		"svelte": "^5.43.2",
 		"turbo": "^2.5.8",
 		"typescript": "~5.9.3",
-		"vite": "npm:rolldown-vite@7.1.14"
+		"vite": "npm:rolldown-vite@7.1.14",
+		"vitest": "^4.0.9"
 	},
 	"pnpm": {
 		"overrides": {
