Use engaging hues within the touch screen bit
It seems to add and remove sometimes- this will need investigation.

--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,7 @@
 			"dependsOn": ["^prettier"]
 		},
 		"format": {
-			"dependsOn": ["biome", "prettier", "^format"]
+			"dependsOn": ["biome", "prettier", "superhtml", "^format"]
 		},
 		"build": {
 			"dependsOn": ["^build"],
