--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@storybook/addon-svelte-csf": "^5.0.10",
 		"@storybook/svelte-vite": "^10.0.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@types/node": "^24.10.1",
 		"prettier": "^3.6.2",
 		"storybook": "^10.0.2",
 		"svelte": "^5.43.2",
