--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,13 @@
 {
 	"$schema": "https://json.schemastore.org/prettierrc",
-	"proseWrap": "always"
+	"proseWrap": "always",
+	"plugins": ["prettier-plugin-svelte"],
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte"
+			}
+		}
+	]
 }
