--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,7 @@
 		"useIgnoreFile": true
 	},
 	"files": {
-		"includes": ["**", "!!**/dist"]
+		"includes": ["**", "!**/dist", "!**/*.svelte"]
 	},
 	"formatter": {
 		"enabled": true,
