--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/node": "^24.10.1",
 		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
 		"storybook": "^10.0.2",
 		"svelte": "^5.43.2",
 		"turbo": "^2.5.8",
