--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,29 +10,31 @@ env:
   WORKLOAD_IDENTITY_PROVIDER: "projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider" # TODO: update to your workload identity provider
 
 jobs:
-  setup-build-publish-deploy:
-    name: "Setup, Build, Publish, and Deploy"
-    runs-on: "ubuntu-latest"
-    environment: "production"
+  setup-build-publish:
+    name: Setup, Build, Publish
+    runs-on: ubuntu-latest
+    environment: production
 
     permissions:
-      contents: "read"
-      id-token: "write"
+      contents: read
+      id-token: write
 
     steps:
-      - name: "Checkout"
+      - name: Checkout
         uses: "actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3" # actions/checkout@v6
+
       - name: Install pnpm
         uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # pnpm/action-setup@v4
-        with:
-          version: 10
+
       - name: Use Node.js
         uses: actions/setup-node@633bb92bc0aabcae06e8ea93b85aecddd374c402 # actions/setup-node@v4
         with:
           node-version: 25
           cache: "pnpm"
+
       - name: Install dependencies
         run: pnpm install
+
       - name: "build"
         run: pnpm exec turbo build
 
