--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,27 +1,22 @@
-name: "Build and Deploy to GCS"
+name: Build and Deploy
 
 on:
   push:
     branches:
       - main
 
-env:
-  PROJECT_ID: "my-project" # TODO: update to your Google Cloud project ID
-  WORKLOAD_IDENTITY_PROVIDER: "projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider" # TODO: update to your workload identity provider
-
 jobs:
-  setup-build-publish:
+  build-artifact:
     name: Setup, Build, Publish
     runs-on: ubuntu-latest
     environment: production
 
     permissions:
       contents: read
-      id-token: write
 
     steps:
       - name: Checkout
-        uses: "actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3" # actions/checkout@v6
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # actions/checkout@v6
 
       - name: Install pnpm
         uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # pnpm/action-setup@v4
@@ -30,23 +25,19 @@ jobs:
         uses: actions/setup-node@633bb92bc0aabcae06e8ea93b85aecddd374c402 # actions/setup-node@v4
         with:
           node-version: 25
-          cache: "pnpm"
+          cache: pnpm
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: "build"
+      - name: build
         run: pnpm exec turbo build
 
-      # Configure Workload Identity Federation and generate an access token.
-      #
-      # See https://github.com/google-github-actions/auth for more options,
-      # including authenticating via a JSON credentials file.
-      - id: "auth"
-        name: "Authenticate to Google Cloud"
-        uses: "google-github-actions/auth@f112390a2df9932162083945e46d439060d66ec2" # google-github-actions/auth@v2
+      - name: Upload artifacts
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # actions/upload-artifact@v6.0.0
         with:
-          workload_identity_provider: "${{ env.WORKLOAD_IDENTITY_PROVIDER }}"
-
-      - name: "setup cloud SDK"
-        uses: google-github-actions/setup-gcloud@aa5489c8933f4cc7a4f7d45035b3b1440c9c10db
+          name: web
+          path: dist
+          if-no-files-found: error
+          retention-days: 2
+          include-hidden-files: true
