--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,17 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - main
+      - $default-branch
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: site
+  cancel-in-progress: false
 
 jobs:
   build-artifact:
@@ -41,3 +51,15 @@ jobs:
           if-no-files-found: error
           retention-days: 2
           include-hidden-files: true
+
+  publish-site:
+    name: publish github site
+    runs-on: ubuntu-latest
+    needs:
+      - build-artifact
+
+    steps:
+      - name: Deploy to github pages
+        uses: actions/configure-github-pages@983d7736d9b0ae728b81ab479565c72886d7745b # actions/configure-github-pages@v5.0.0
+        with:
+          enablement: true
