--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,9 +53,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-artifact]
 
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
       - name: Deploy to github pages
         uses: actions/deploy-pages@d6db90164ac5ed86f2b6aed7e0febac5b3c0c03e # v4.0.5
-        # uses: actions/configure-github-pages@983d7736d9b0ae728b81ab479565c72886d7745b # v5.0.0
-        # with:
-        #   enablement: true
+
