--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@storybook/svelte-vite": "^10.0.8",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/node": "^24.10.1",
+		"@webgpu/types": "^0.1.68",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"storybook": "^10.0.8",
